# cromotex

./: .gitignore  LICENSE  README.md  data_download_steps.md  environment.yaml  pyproject.toml
config/: config.yaml
config/cromotex/: cromotex_patch_transformer.yaml
preprocess/: prepare_dataset.py  unzip_datasets.py
scripts/: finetune.py  pretrain_ecg_encoder.py  pretrain_img_classif.py  train_multimodal.py
src/cromotex/models/: ahnp_loss.py  cromotex.py  image_encoder.py  timeseries_encoder.py
src/cromotex/utils/: datasets.py  metrics.py  preprocess.py  ts_augmentations.py  utils.py
