[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cromotex"
version = "1.0.0"
description = "CroMoTEX: Cross-Modal Transfer between ECG and Chest X-ray"
authors = [{name = "Vineet Punyamoorty", email = "vpunyamo@purdue.edu"}]
license = {text = "MIT"}
dependencies = [
    "torch",
    "torchvision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.setuptools]
packages = {find = {where = ["src"]}}